...
    <string name="rachunek_rozliczeniowy" translatable="false">RACHUNEK ROZLICZENIOWY z dnia %1$s\nZA ENERGIĘ ELEKTRYCZNĄ I USŁUGI DYSTRYBUCJI</string>
    <string name="strefa_calodobowa" translatable="false">całodobowa</string>
    <string name="strefa_dzienna" translatable="false">dzienna</string>
    <string name="strefa_nocna" translatable="false">nocna</string>
    <string name="strefa_pusta" translatable="false"/>

    <string name="za_energie_czynna" translatable="false">za energię czynną</string>
    <string name="skladnik_jakosciowy" translatable="false">składnik jakościowy</string>
    <string name="oplata_sieciowa" translatable="false">opłata sieciowa</string>
    <string name="oplata_przejsciowa" translatable="false">opłata przejściowa</string>
    <string name="oplata_stala_za_przesyl" translatable="false">opł. stała za przesył</string>
    <string name="oplata_abonamentowa" translatable="false">opłata abonamentowa</string>
    <string name="pge_bill_oplata_handlowa" translatable="false">opłata handlowa</string>
    <string name="oplata_oze" translatable="false">opłata OZE</string>

    <string name="za_energie_czynna_G12dzien" translatable="false">za energię czynną (strefa dzienna)</string>
    <string name="za_energie_czynna_G12noc" translatable="false">za energię czynną (strefa nocna)</string>
    <string name="oplata_sieciowa_G12dzien" translatable="false">opłata sieciowa (strefa dzienna)</string>
    <string name="oplata_sieciowa_G12noc" translatable="false">opłata sieciowa (strefa nocna)</string>

    <string name="tariff_G11_on_bill" translatable="false">Taryfa: G11</string>
    <string name="tariff_G12_on_bill" translatable="false">Taryfa: G12</string>

    <string name="kWh" translatable="false">kWh</string>
    <string name="MWh" translatable="false">MWh</string>
...
    <string name="abonamentowa" translatable="false">Abonamentowa</string>
    <string name="pgnig_bill_oplata_handlowa" translatable="false">Handlowa</string>
    <string name="settings_oplata_abonamentowa" translatable="false">Opłata abonamentowa</string>
    <string name="paliwo_gazowe" translatable="false">Paliwo gazowe</string>
    <string name="dystrybucyjna_stala" translatable="false">Dystrybucyjna stała</string>
    <string name="dystrybucyjna_zmienna" translatable="false">Dystrybucyjna zmienna</string>
    <string name="wspolczynnik_konwersji" translatable="false">Współczynnik konwersji</string>

    <string name="mc" translatable="false">mc</string>

    <!-- Preferences -->
    <string name="settings_label">Settings</string>
    <string name="settings_list_item_logo_content_desc">provider icon</string>
...
    <string name="check_prices_info_title">Check your prices before calculation</string>
    <string name="check_price_info_message">Calculated bill cost depends on prices, which differs according to individual tariff, as well as location, amount and time of usage. Enter the prices you get on your utility bill.</string>
    <string name="check_prices_info_ok">Check</string>
    <string name="check_prices_info_cancel">Later</string>

    <string name="confirm_restore_prices_message">Are you sure you want to restore settings default values?</string>
    <string name="restore_prices_confirm">Yes</string>
    <string name="restore_prices_cancel">Cancel</string>

    <string name="settings_help_example_content_desc">Where to look at bill example</string>
    <string name="settings_energy_tariff_pick_G11" translatable="false">Taryfa całodobowa (G11)</string>
    <string name="settings_energy_tariff_pick_G12" translatable="false">Taryfa dwustrefowa (G12)</string>
    <string name="price_measure_zl_kWh" translatable="false">zł/kWh</string>
    <string name="price_measure_zl_MWh" translatable="false">zł/MWh</string>
    <string name="price_measure_zl_month" translatable="false">zł/m-c</string>
    <string name="price_disabled">Not included</string>

    <string name="settings_input_accept">Save</string>
...
