<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="@string/preferences_pge_prices"
        android:title="@string/pge_prices"
        android:summary="@string/settings_pge_summary" />

    <PreferenceScreen
        android:key="@string/preferences_pgnig_prices"
        android:title="@string/pgnig_prices"
        android:summary="@string/settings_pgnig_summary" />

    <PreferenceScreen
        android:key="preferences_tauron_prices"
        android:title="@string/tauron_prices"
        android:summary="@string/settings_tauron_summary" />

</PreferenceScreen>