...
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:ellipsize="marquee"
            android:requiresFadingEdge="horizontal"
            tools:text="PGE prices"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignLeft="@id/title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="4"
...
